Fix initiative text link wrapping.

--- a/stylesheets/page.scss
+++ b/stylesheets/page.scss
@@ -70,6 +70,7 @@ strong {
 
 .text {
 	line-height: 1.5;
+	word-wrap: break-word;
 
 	h1 {
 		font-size: 3.4rem;
